--- a/CMS-FailedBatchProcessNotification/CMSAtWorkFunc.csproj
+++ b/CMS-FailedBatchProcessNotification/CMSAtWorkFunc.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>CMS_FailedBatchProcessNotification</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
